[MOD] HTTP Processing: Use new JDK 11 HTTP Client API. #2128