@@ -1,17 +1,20 @@
 package org.basex.io;
 
-import static org.basex.core.Text.*;
-
 import java.io.*;
 import java.net.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpClient.*;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.*;
 import java.nio.file.*;
 import java.security.*;
 import java.security.cert.*;
+import java.time.*;
 
 import javax.net.ssl.*;
 import javax.xml.transform.stream.*;
 
-import org.basex.core.*;
 import org.basex.core.StaticOptions.*;
 import org.basex.io.in.*;
 import org.basex.util.*;
@@ -28,8 +31,6 @@ import org.xml.sax.*;
 public final class IOUrl extends IO {
   /** Optional SSL context for ignoring certificates. */
   private static SSLContext ssl;
-  /** Timeout for connecting to a resource (seconds). */
-  private static final int TIMEOUT = 10;
 
   /**
    * Constructor.
@@ -56,44 +57,32 @@ public final class IOUrl extends IO {
 
   @Override
   public InputStream inputStream() throws IOException {
-    URLConnection conn = null;
-    try {
-      conn = connection();
-      return conn.getInputStream();
-    } catch(final IOException ex) {
-      final TokenBuilder msg = new TokenBuilder().add(ex);
-      // try to retrieve more information on why the request failed
-      if(conn instanceof HttpURLConnection) {
-        final InputStream es = ((HttpURLConnection) conn).getErrorStream();
-        if(es != null) {
-          final String error = new IOStream(es).string();
-          if(!error.isEmpty()) msg.add(NL).add(INFORMATION).add(COL).add(NL).add(error);
-        }
-      }
-      final IOException io = new IOException(msg.toString());
-      io.setStackTrace(ex.getStackTrace());
-      throw io;
-    } catch(final RuntimeException ex) {
-      // catch unexpected runtime exceptions
-      Util.debug(ex);
-      throw new BaseXException(NOT_PARSED_X, pth);
-    }
+    return response(HttpResponse.BodyHandlers.ofInputStream()).body();
   }
 
   /**
-   * Returns a connection to the URL.
-   * @return connection
+   * Returns an HTTP response.
+   * @param <T> response type
+   * @param handler body handler
+   * @return response
    * @throws IOException I/O exception
    */
-  public URLConnection connection() throws IOException {
-    final URL url = new URL(pth);
-    final URLConnection conn = url.openConnection();
-    conn.setConnectTimeout(TIMEOUT * 1000);
-    // use basic authentication if credentials are contained in the url
-    final String ui = url.getUserInfo();
-    if(ui != null) conn.setRequestProperty(HttpText.AUTHORIZATION,
-        AuthMethod.BASIC + " " + Base64.encode(ui));
-    return conn;
+  public <T> HttpResponse<T> response(final BodyHandler<T> handler) throws IOException {
+    try {
+      final URI uri = new URI(pth);
+      final HttpRequest.Builder hb = HttpRequest.newBuilder(uri).timeout(Duration.ofMinutes(1));
+      // credentials in the url: use basic authentication
+      final String ui = uri.getUserInfo();
+      if(ui != null) hb.header(HttpText.AUTHORIZATION, AuthMethod.BASIC + " " + Base64.encode(ui));
+      final HttpClient.Builder cb = HttpClient.newBuilder();
+      if(ssl != null) cb.sslContext(ssl);
+      return cb.followRedirects(Redirect.ALWAYS).build().send(hb.build(), handler);
+    } catch(final IOException ex) {
+      throw ex;
+    } catch(final Exception  ex) {
+      Util.debug(ex);
+      throw new IOException(ex.getMessage());
+    }
   }
 
   /**
@@ -113,7 +102,7 @@ public final class IOUrl extends IO {
   }
 
   /**
-   * Normalizes the specified URI and creates a new instance of this class.
+   * Normalizes the specified URI and creates a path URI.
    * @param uri uri to be converted
    * @return file path
    */
